Layout Fixes
I made a lot of CSS changes to make the text appear underneath the main text. I changed the height of the area with the particles. It is ready to be added to as a normal webpage now.

--- a/Divide Solutions Website/demo/css/style.css
+++ b/Divide Solutions Website/demo/css/style.css
@@ -60,7 +60,7 @@ table {
 html, body {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 body {
@@ -74,15 +74,16 @@ body {
 }
 
 #particles {
-  width: 100%;
+ /* width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: hidden;*/
+  height: 500px;
 }
 
 #intro {
   position: absolute;
   left: 0;
-  top: 50%;
+  top: 40%;
   padding: 0 20px;
   width: 100%;
   text-align: center;
@@ -102,15 +103,13 @@ h1::after {
   margin: 30px auto;
   line-height: 1.1;
 }
-.divide {
-    color: #F93943;
-}
+
 p {
   margin: 0 0 30px 0;
   font-size: 24px;
 }
 .btn {
-display: inline-block !important;
+    display: inline-block !important;
     padding: 15px 30px !important;
     border: 2px solid #fff !important;
     text-transform: uppercase;
@@ -129,6 +128,49 @@ display: inline-block !important;
   color: #F93943 !important;
   border-color: #F93943 !important;
 }
+
+
+
+
+
+/*normal styles*/
+
+.divide {
+    color: #F93943;
+}
+
+.logo {
+  float: left;
+  height: 150px;
+  width: 150px;
+  /*z-index: 2;*/
+}
+.services{
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  font-size: 22px;
+}
+
+.width100 {
+  width: 100% !important;
+}
+
+.margin-top-bottom-2020 {
+    margin-top:20px; 
+    margin-bottom:20px; 
+}
+
+
+
+
+
+
+
+
+
+
+/*media queries*/
 
 @media only screen and (max-width: 1000px) {
   h1 {
@@ -171,6 +213,6 @@ display: inline-block !important;
     height: 4px;
   }
 }
-.row {
+/*.row {
     maargin-top: 50px;
-}
+}*/
